--- a/index.html
+++ b/index.html
@@ -91,6 +91,10 @@
         setTimeout(typeWriter, speed);
         j++;
       }
+      else {
+      setTimeout(removeWriter, speed * 2);
+    }
+
     }
   
     function removeWriter() {
